--- a/admin-user/src/videoUpload-v1/videoUpload-v1.html
+++ b/admin-user/src/videoUpload-v1/videoUpload-v1.html
@@ -3,8 +3,8 @@
 <div class="gh-create-item">
     <h5 class="pull-left gh-item-title">视频上传</h5>
     <a class="pull-right gh-btn-title" id="openFileSelectBox" href="javascript:void(0);">
-        <!-- <input type="file" class="" nv-file-select uploader="uploader" ng-model="uploader" multiple="multiple"> -->
-        <input type="file" class="filetop" nv-file-select uploader="uploader" ng-model="uploaderApy" onchange="angular.element(this).scope().fileNameChanged(this)" multiple="multiple">
+        <input type="file" class="filetop" file-model="fileToUpload" multiple="multiple" accept=".avi,.mov,.mp4">
+        <!-- <input type="file" class="filetop" nv-file-select uploader="uploader" ng-model="uploaderApy" onchange="angular.element(this).scope().fileNameChanged(this)" multiple="multiple"> -->
         <span class="add">+</span>
         <span class="text">添加视频文件{{fileItem.name}}</span>
     </a>
@@ -40,22 +40,12 @@
                     <th>操作</th>
                 </tr>
             </thead>
-        </table>
-    </div>
-
-    <div class="table-box">
-        <table width="100%">
-            <colgroup>
-                <col width="25%">
-                <col width="10%">
-                <col width="25%">
-                <col width="10%">
-            </colgroup>
             <tbody id="videoSelectTbody">
-                <tr id="fileSelectButton" class="" style="display: none;">
+                <tr id="fileSelectButton" class="" ng-show="!names.length">
                     <td colspan="4">
                         <div class="clearfix" style="height:300px;">
                             <div class="clearfix upload-box">
+                              <input type="file" class="filetop" file-model="fileToUpload" multiple="multiple" accept=".avi,.mov,.mp4">
                                 <dl>
                                     <dt id="selectSystemFile1" style="height:55px;"><svg class="icon-jiemushangjia-big icon-upload-blue size-54"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-jiemushangjia-big">
                                         <svg id="icon-jiemushangjia-big" viewBox="0 0 20 20" width="100%" height="100%">
@@ -71,52 +61,28 @@
                     </td>
                 </tr>
 
-                <tr class="" ng-repeat="item in uploader.queue">
+                <tr class="" ng-repeat="item in names" ng-show="names.length">
                    <td>
                        <div class="pull-left">
-                          <!-- <input type="text" class="form-control" maxlength="60" videoName="videoName" ng-model="item.uploader.options" style="width:190px;"> -->
-                          <input type="text" class="form-control" maxlength="60" videoName="videoName" style="width:190px;" ng-model="item.file.name">
+                          <input type="text" class="form-control" maxlength="60" videoName="videoName" style="width:190px;" ng-model="item.arr.videoName">
                        </div>
                    </td>
-                   <td><div class="td-2">32.8M</div></td>
+                   <td><div class="td-2">{{item.files.size}}</div></td>
                    <td class="list-td">
-                      {{item.file.name|filter:jpg}}
+                      <jr-dropdown-button id="companyProvinceCode" options="item.arr.saixuan" value="'0'"></jr-dropdown-button>
+                       <jr-dropdown-button id="companyProvinceCode" options="item.arr.saixuan" value="'0'"></jr-dropdown-button>
                    </td>
                    <td class="del-td">
-                       <!-- <a href="javascript:void(0)" ng-click="item.upload()">删除</a> -->
-                       <a href="javascript:void(0)" ng-click="item.remove()">删除</a>
+                       <a href="javascript:void(0)" ng-click="dataRemove($index)">删除</a>
                    </td>
-               </tr>
-               <!-- <tr class="">
-                   <td>
-                       <div class="pull-left"><input type="text" class="form-control" maxlength="60" videoName="videoName" style="width:190px;" value="123.mp4"></div>
-                   </td>
-                   <td><div class="td-2">32.8M</div></td>
-                   <td class="list-td">
-                       <jr-dropdown-button id="companyProvinceCode" options="queryOptions.videolebel" value="ssw"></jr-dropdown-button>
-                       <jr-dropdown-button id="companyProvinceCode" options="df" value="'0'"></jr-dropdown-button>
-                   </td>
-                   <td class="del-td">
-                       <a href="javascript:void(0)" selectTbodyDelete="selectTbodyDelete">删除</a>
-                   </td>
-               </tr>
-               <tr class="">
-                   <td>
-                       <div class="pull-left"><input type="text" class="form-control" maxlength="60" videoName="videoName" style="width:190px;" value="123.mp4"></div>
-                   </td>
-                   <td><div class="td-2">32.8M</div></td>
-                   <td class="list-td">
-                       <jr-dropdown-button id="companyProvinceCode" options="queryOptions.videolebel" value="ssw"></jr-dropdown-button>
-                       <jr-dropdown-button id="companyProvinceCode" options="df" value="'0'"></jr-dropdown-button>
-                   </td>
-                   <td class="del-td">
-                       <a href="javascript:void(0)" selectTbodyDelete="selectTbodyDelete">删除</a>
-                   </td>
-               </tr> -->
+                </tr>
             </tbody>
         </table>
     </div>
-    <button ng-click="uploadPic(picFile)">Submit</button>
+    <div class="modalbtn-blue text-center">
+      <input class="btn-ipt-hui {{names.length?'btn-ipt-blue':''}}" id="uploadVideoBtn" type="button" value="上传视频">
+    </div>
+    
 </div>
 
 <!-- 表格/e -->
