--- a/admin-user/src/index.html
+++ b/admin-user/src/index.html
@@ -60,8 +60,8 @@
                     <ul class="submenu">
                         <li ng-if="canAccess(',videoUpload,')" ng-class="{active: $state.includes('videoUpload.list')}"><a href="#/videoUpload">视频上传</a></li>
                         <li ng-if="canAccess(',videoManagement,')" ng-class="{active: $state.includes('videoManagement.list')}"><a href="#/videoManagement">视频管理</a></li>
-                        <li ng-if="canAccess(',repayingList,')" ng-class="{active: $state.includes('repayingList.list')}"><a href="#/repayingList">专辑管理</a></li>
-                        <li ng-if="canAccess(',loanList,')" ng-class="{active: $state.includes('loanList.list')}"><a href="#/loanList">频道管理</a></li>
+                        <li ng-if="canAccess(',albumManagement,')" ng-class="{active: $state.includes('albumManagement.list')}"><a href="#/albumManagement">专辑管理</a></li>
+                        <!-- <li ng-if="canAccess(',loanList,')" ng-class="{active: $state.includes('loanList.list')}"><a href="#/loanList">电视剧管理</a></li> -->
                     </ul>
                 </li>
             </ul>
