--- a/admin-user/src/loan-list/loan-list.html
+++ b/admin-user/src/loan-list/loan-list.html
@@ -1,12 +1,9 @@
-
 <link rel="stylesheet" href="loan-list.less?__inline" />
 <div class="block clearfix">
     <form name="searchForm" novalidate ng-submit="search($event)">
-
         <div class="list-filter-col">
-            <input type="text" class="form-control" ng-model="queryParams.companyKey"  jr-placeholder="公寓名称"  />
+            <input type="text" class="form-control" ng-model="queryParams.companyKey" jr-placeholder="公寓名称" />
         </div>
-
         <div class="list-filter-col">
             <jr-dropdown-button options="queryOptions.payStatus" value="queryParams.payStatus" class="w150"></jr-dropdown-button>
         </div>
@@ -26,15 +23,13 @@
             <div class="list-filter-col">
                 <button class="btn btn-default" type="button" ng-click="clearParams()">清空查询项</button>
             </div>
-
         </div>
     </form>
 </div>
-
-
 <table class="table">
     <colgroup>
-        <col width="80"/> <!-- 订单编号 -->
+        <col width="80" />
+        <!-- 订单编号 -->
     </colgroup>
     <thead>
         <tr>
@@ -42,7 +37,6 @@
             <th>公寓</th>
             <th>租客姓名</th>
             <th>打款期数/总期数</th>
-
             <th>打款金额(元)</th>
             <th>打款状态</th>
             <th>应打款时间</th>
@@ -52,27 +46,26 @@
     </thead>
     <tbody>
         <tr ng-repeat="order in orders.infoList">
-            <td><input ng-if="order.payStatus=='10'" type="checkbox" ng-click="acheck(order,!order.checked)" ng-checked="order.checked" style="margin-right: 10px;"> {{order.orderId}}</td>
+            <td>
+                <input ng-if="order.payStatus=='10'" type="checkbox" ng-click="acheck(order,!order.checked)" ng-checked="order.checked" style="margin-right: 10px;"> {{order.orderId}}</td>
             <td>{{order.companyName}}</td>
             <td>{{order.userName}}</td>
             <td>{{order.period}}/{{order.totalPeriods}}</td>
-
             <td>{{order.payAmount}}</td>
             <td>{{order.payStatusStr}}</td>
             <td><span class="time">{{order.payDate}}</span></td>
             <td><span class="time">{{order.realPayDate}}</span></td>
             <td class="opt">
                 <a ng-href="#/order/{{order.orderId}}" target="_blank">详情</a>
-
             </td>
             <!--<td></td>-->
         </tr>
-    <tr ng-if="userInfo.roleId=='101'&&queryParams.payStatus=='10'&&orders.infoList.length>0">
-        <td>
-            <input type="checkbox" style="margin-right: 10px;" ng-click="change(!allchecked)" ng-checked="allchecked">
-            <button class="btn btn-default" type="button" ng-click="publishall()">确认打款及导出</button>
-        </td>
-    </tr>
+        <tr ng-if="userInfo.roleId=='101'&&queryParams.payStatus=='10'&&orders.infoList.length>0">
+            <td>
+                <input type="checkbox" style="margin-right: 10px;" ng-click="change(!allchecked)" ng-checked="allchecked">
+                <button class="btn btn-default" type="button" ng-click="publishall()">确认打款及导出</button>
+            </td>
+        </tr>
         <tr ng-if="userInfo.roleId!='101'||(queryParams.payStatus=='1'&&orders.infoList.length>0)">
             <td>
                 <input type="checkbox" style="margin-right: 10px;" ng-click="change(!allchecked)" ng-checked="allchecked">
